WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
47660
SVGFEConvolveMatrixElement doesn't support dynamic invalidation
https://bugs.webkit.org/show_bug.cgi?id=47660
Summary
SVGFEConvolveMatrixElement doesn't support dynamic invalidation
Renata Hodovan
Reported
2010-10-14 01:54:27 PDT
SVGFEConvolveMatrixElement doesn't support dynamic invalidation
Attachments
Patch for feConvolveMatrix DOM attributes
(1.47 MB, patch)
2010-10-14 03:50 PDT
,
Renata Hodovan
kling
: review-
Details
Formatted Diff
Diff
Patch for feConvolveMatrix DOM attributes
(1.47 MB, patch)
2010-10-14 05:30 PDT
,
Renata Hodovan
no flags
Details
Formatted Diff
Diff
Patch
(1.49 MB, patch)
2010-11-05 07:04 PDT
,
Renata Hodovan
zimmermann
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Renata Hodovan
Comment 1
2010-10-14 03:50:48 PDT
Created
attachment 70723
[details]
Patch for feConvolveMatrix DOM attributes
Andreas Kling
Comment 2
2010-10-14 04:06:12 PDT
Comment on
attachment 70723
[details]
Patch for feConvolveMatrix DOM attributes View in context:
https://bugs.webkit.org/attachment.cgi?id=70723&action=review
> WebCore/svg/SVGFEConvolveMatrixElement.idl:54 > + void setKernelUnitLength(in float kernelUnitLengthX, in float kernelUnitLengthY); > + void setOrder(in unsigned long orderX, in unsigned long orderY);
Why are you adding these, are they in the specification? Regardless, they're not covered by any layout tests. This needs to be fixed.
Renata Hodovan
Comment 3
2010-10-14 05:30:27 PDT
Created
attachment 70729
[details]
Patch for feConvolveMatrix DOM attributes
Renata Hodovan
Comment 4
2010-10-14 05:31:26 PDT
(In reply to
comment #2
)
> (From update of
attachment 70723
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=70723&action=review
> > > WebCore/svg/SVGFEConvolveMatrixElement.idl:54 > > + void setKernelUnitLength(in float kernelUnitLengthX, in float kernelUnitLengthY); > > + void setOrder(in unsigned long orderX, in unsigned long orderY); > > Why are you adding these, are they in the specification? > Regardless, they're not covered by any layout tests. This needs to be fixed.
It's done. You were right, these setters are really not part of spec.
Andreas Kling
Comment 5
2010-10-14 05:36:33 PDT
Comment on
attachment 70729
[details]
Patch for feConvolveMatrix DOM attributes Looks great, r=me
WebKit Commit Bot
Comment 6
2010-10-14 10:13:09 PDT
Comment on
attachment 70729
[details]
Patch for feConvolveMatrix DOM attributes Clearing flags on attachment: 70729 Committed
r69774
: <
http://trac.webkit.org/changeset/69774
>
WebKit Commit Bot
Comment 7
2010-10-14 10:13:19 PDT
All reviewed patches have been landed. Closing bug.
Andreas Kling
Comment 8
2010-11-05 07:01:30 PDT
Reopening
Renata Hodovan
Comment 9
2010-11-05 07:04:00 PDT
Created
attachment 73061
[details]
Patch
Nikolas Zimmermann
Comment 10
2010-11-05 23:11:07 PDT
Comment on
attachment 73061
[details]
Patch Great job, Reni. r=me. Looking forward to your first real commit :-)
Renata Hodovan
Comment 11
2010-11-11 05:13:39 PST
Landed in 71508:
http://trac.webkit.org/changeset/71508
Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug