2010-10-14  Renata Hodovan  <reni@inf.u-szeged.hu>

Reviewed by Andreas Kling.

        SVGFEConvolveMatrixElement doesn't support dynamic invalidation, when attributes change.
        https://bugs.webkit.org/show_bug.cgi?id=47660

        Adding layout tests for feConvolveMatrix dynamic DOM changes. SVGDOM tests cases will be in the following patch because of patch-size limitation (2M in bugzilla).

        * platform/mac/svg/dynamic-updates/SVGFEConvolveMatrixElement-dom-bias-attr-expected.checksum: Added.
        * platform/mac/svg/dynamic-updates/SVGFEConvolveMatrixElement-dom-bias-attr-expected.png: Added.
        * platform/mac/svg/dynamic-updates/SVGFEConvolveMatrixElement-dom-divisor-attr-expected.checksum: Added.
        * platform/mac/svg/dynamic-updates/SVGFEConvolveMatrixElement-dom-divisor-attr-expected.png: Added.
        * platform/mac/svg/dynamic-updates/SVGFEConvolveMatrixElement-dom-edgeMode-attr-expected.checksum: Added.
        * platform/mac/svg/dynamic-updates/SVGFEConvolveMatrixElement-dom-edgeMode-attr-expected.png: Added.
        * platform/mac/svg/dynamic-updates/SVGFEConvolveMatrixElement-dom-in-attr-expected.checksum: Added.
        * platform/mac/svg/dynamic-updates/SVGFEConvolveMatrixElement-dom-in-attr-expected.png: Added.
        * platform/mac/svg/dynamic-updates/SVGFEConvolveMatrixElement-dom-kernelMatrix-attr-expected.checksum: Added.
        * platform/mac/svg/dynamic-updates/SVGFEConvolveMatrixElement-dom-kernelMatrix-attr-expected.png: Added.
        * platform/mac/svg/dynamic-updates/SVGFEConvolveMatrixElement-dom-kernelUnitLength-attr-expected.checksum: Added.
        * platform/mac/svg/dynamic-updates/SVGFEConvolveMatrixElement-dom-kernelUnitLength-attr-expected.png: Added.
        * platform/mac/svg/dynamic-updates/SVGFEConvolveMatrixElement-dom-order-attr-expected.checksum: Added.
        * platform/mac/svg/dynamic-updates/SVGFEConvolveMatrixElement-dom-order-attr-expected.png: Added.
        * platform/mac/svg/dynamic-updates/SVGFEConvolveMatrixElement-dom-preserveAlpha-attr-expected.checksum: Added.
        * platform/mac/svg/dynamic-updates/SVGFEConvolveMatrixElement-dom-preserveAlpha-attr-expected.png: Added.
        * platform/mac/svg/dynamic-updates/SVGFEConvolveMatrixElement-dom-targetX-attr-expected.checksum: Added.
        * platform/mac/svg/dynamic-updates/SVGFEConvolveMatrixElement-dom-targetX-attr-expected.png: Added.
        * platform/mac/svg/dynamic-updates/SVGFEConvolveMatrixElement-dom-targetY-attr-expected.checksum: Added.
        * platform/mac/svg/dynamic-updates/SVGFEConvolveMatrixElement-dom-targetY-attr-expected.png: Added.
        * svg/dynamic-updates/SVGFEConvolveMatrixElement-dom-bias-attr-expected.txt: Added.
        * svg/dynamic-updates/SVGFEConvolveMatrixElement-dom-bias-attr.html: Added.
        * svg/dynamic-updates/SVGFEConvolveMatrixElement-dom-divisor-attr-expected.txt: Added.
        * svg/dynamic-updates/SVGFEConvolveMatrixElement-dom-divisor-attr.html: Added.
        * svg/dynamic-updates/SVGFEConvolveMatrixElement-dom-edgeMode-attr-expected.txt: Added.
        * svg/dynamic-updates/SVGFEConvolveMatrixElement-dom-edgeMode-attr.html: Added.
        * svg/dynamic-updates/SVGFEConvolveMatrixElement-dom-in-attr-expected.txt: Added.
        * svg/dynamic-updates/SVGFEConvolveMatrixElement-dom-in-attr.html: Added.
        * svg/dynamic-updates/SVGFEConvolveMatrixElement-dom-kernelMatrix-attr-expected.txt: Added.
        * svg/dynamic-updates/SVGFEConvolveMatrixElement-dom-kernelMatrix-attr.html: Added.
        * svg/dynamic-updates/SVGFEConvolveMatrixElement-dom-kernelUnitLength-attr-expected.txt: Added.
        * svg/dynamic-updates/SVGFEConvolveMatrixElement-dom-kernelUnitLength-attr.html: Added.
        * svg/dynamic-updates/SVGFEConvolveMatrixElement-dom-order-attr-expected.txt: Added.
        * svg/dynamic-updates/SVGFEConvolveMatrixElement-dom-order-attr.html: Added.
        * svg/dynamic-updates/SVGFEConvolveMatrixElement-dom-preserveAlpha-attr-expected.txt: Added.
        * svg/dynamic-updates/SVGFEConvolveMatrixElement-dom-preserveAlpha-attr.html: Added.
        * svg/dynamic-updates/SVGFEConvolveMatrixElement-dom-targetX-attr-expected.txt: Added.
        * svg/dynamic-updates/SVGFEConvolveMatrixElement-dom-targetX-attr.html: Added.
        * svg/dynamic-updates/SVGFEConvolveMatrixElement-dom-targetY-attr-expected.txt: Added.
        * svg/dynamic-updates/SVGFEConvolveMatrixElement-dom-targetY-attr.html: Added.
        * svg/dynamic-updates/script-tests/SVGFEConvolveMatrixElement-dom-bias-attr.js: Added.
        (executeTest):
        * svg/dynamic-updates/script-tests/SVGFEConvolveMatrixElement-dom-divisor-attr.js: Added.
        (executeTest):
        * svg/dynamic-updates/script-tests/SVGFEConvolveMatrixElement-dom-edgeMode-attr.js: Added.
        (executeTest):
        * svg/dynamic-updates/script-tests/SVGFEConvolveMatrixElement-dom-in-attr.js: Added.
        (executeTest):
        * svg/dynamic-updates/script-tests/SVGFEConvolveMatrixElement-dom-kernelMatrix-attr.js: Added.
        (executeTest):
        * svg/dynamic-updates/script-tests/SVGFEConvolveMatrixElement-dom-kernelUnitLength-attr.js: Added.
        (executeTest):
        * svg/dynamic-updates/script-tests/SVGFEConvolveMatrixElement-dom-order-attr.js: Added.
        (executeTest):
        * svg/dynamic-updates/script-tests/SVGFEConvolveMatrixElement-dom-preserveAlpha-attr.js: Added.
        (executeTest):
        * svg/dynamic-updates/script-tests/SVGFEConvolveMatrixElement-dom-targetX-attr.js: Added.
        (executeTest):
        * svg/dynamic-updates/script-tests/SVGFEConvolveMatrixElement-dom-targetY-attr.js: Added.
        (executeTest):
2010-10-14  Renata Hodovan  <reni@inf.u-szeged.hu>

        Reviewed by Andreas Kling.

        SVGFEConvolveMatrixElement doesn't support dynamic invalidation, when attributes change.
        https://bugs.webkit.org/show_bug.cgi?id=47660

        The dynamic changes are captured by the svgAttributeChange function, and invalidate the filter primitive if necessary.
        The patch also implements the simple setOrder and setKernelUnitLength methods.

        Tests: svg/dynamic-updates/SVGFEConvolveMatrixElement-dom-bias-attr.html
               svg/dynamic-updates/SVGFEConvolveMatrixElement-dom-divisor-attr.html
               svg/dynamic-updates/SVGFEConvolveMatrixElement-dom-edgeMode-attr.html
               svg/dynamic-updates/SVGFEConvolveMatrixElement-dom-in-attr.html
               svg/dynamic-updates/SVGFEConvolveMatrixElement-dom-kernelMatrix-attr.html
               svg/dynamic-updates/SVGFEConvolveMatrixElement-dom-kernelUnitLength-attr.html
               svg/dynamic-updates/SVGFEConvolveMatrixElement-dom-order-attr.html
               svg/dynamic-updates/SVGFEConvolveMatrixElement-dom-preserveAlpha-attr.html
               svg/dynamic-updates/SVGFEConvolveMatrixElement-dom-targetX-attr.html
               svg/dynamic-updates/SVGFEConvolveMatrixElement-dom-targetY-attr.html

        * svg/SVGFEConvolveMatrixElement.cpp:
        (WebCore::SVGFEConvolveMatrixElement::setOrder):
        (WebCore::SVGFEConvolveMatrixElement::setKernelUnitLength):
        (WebCore::SVGFEConvolveMatrixElement::svgAttributeChanged):
        * svg/SVGFEConvolveMatrixElement.h:

Canonical link: https://commits.webkit.org/60361@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69774 268f45cc-cd09-0410-ab3c-d52691b4dbfc